--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -12,26 +12,28 @@ batch_size: 64
 loss: binary_crossentropy
 optimizer: adam
 lr: 0.0001
+precision: 32-true
 
 shuffle_paths: True # makes sense for linear sampling
 shuffle_batches: False # shuffle batches between epochs
 
 gridsearch:
-  hidden_size: { lower: 100, upper: 300, dtype: int }
-  linear_size: { lower: 50, upper: 240, dtype: int }
-  batch_size: { lower: 30, upper: 80, dtype: int }
-  lr: { lower: 0.0002, upper: 0.005, dtype: float }
+  hidden_size: { lower: 100, upper: 300, type: int }
+  linear_size: { lower: 50, upper: 240, type: int }
+  batch_size: { lower: 30, upper: 80, type: int }
+  lr: { lower: 0.0002, upper: 0.005, type: float }
+  precision: { list: [16-mixed, 32-true, 64-true], type: choice }
   num_rnn_layers:
     {
       lower: 2,
       upper: 4,
-      dtype: int,
+      type: int,
       layer_sizes: { lower: 120, upper: 210, layer_type: rnn, varied: True },
     }
   num_lin_layers:
     {
       lower: 2,
       upper: 4,
-      dtype: int,
+      type: int,
       layer_sizes: { lower: 20, upper: 80, layer_type: lin, varied: True },
     }
