fixed shuffling of paths and not labels

--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -1,5 +1,5 @@
 steps: 30
-K_upper_lim: 0.1
+K_upper_lim: 0.3
 
 hidden_size: 64
 linear_size: 32 # used when num_lin_layers > 1
@@ -7,8 +7,8 @@ num_rnn_layers: 2
 num_lin_layers: 2
 dropout: 0.0
 
-epochs: 100
-batch_size: 64
+epochs: 200
+batch_size: 256
 loss: binary_crossentropy
 optimizer: adam
 lr: 0.0001
@@ -18,22 +18,20 @@ shuffle_paths: True # makes sense for linear sampling
 shuffle_batches: False # shuffle batches between epochs
 
 gridsearch:
-  hidden_size: { lower: 100, upper: 300, type: int }
-  linear_size: { lower: 50, upper: 240, type: int }
-  batch_size: { lower: 30, upper: 80, type: int }
+  batch_size: { lower: 32, upper: 256, type: int }
   lr: { lower: 0.0002, upper: 0.005, type: float }
-  precision: { list: [16-mixed, 32-true, 64-true], type: choice }
+  # precision: { list: [16-mixed, 32-true, 64-true], type: choice }
   num_rnn_layers:
     {
-      lower: 2,
-      upper: 4,
+      lower: 1,
+      upper: 5,
       type: int,
-      layer_sizes: { lower: 120, upper: 210, layer_type: rnn, varied: True },
+      layer_sizes: { lower: 50, upper: 150, layer_type: rnn, varied: True },
     }
   num_lin_layers:
     {
-      lower: 2,
-      upper: 4,
+      lower: 1,
+      upper: 3,
       type: int,
-      layer_sizes: { lower: 20, upper: 80, layer_type: lin, varied: True },
+      layer_sizes: { lower: 10, upper: 100, layer_type: lin, varied: True },
     }
