--- a/config/parameters.yaml
+++ b/config/parameters.yaml
@@ -1,29 +1,28 @@
 init_points: 40 # how many points to take from loaded data
-steps: 100 # how many steps to take from loaded data
+steps: 45 # how many steps to take from loaded data
 K: 0.1 # list of values for StandardMap
 
-hidden_size: 64
-linear_size: 32 # used when num_lin_layers > 1
+hidden_size: 128
+linear_size: 128 # used when num_lin_layers > 1
 num_rnn_layers: 2
 num_lin_layers: 2
-dropout: 0.0
+dropout: 0.0 # doesn't seem necessary
 
-epochs: 4000
 batch_size: 256
-loss: binary_crossentropy
+loss: mse
 optimizer: adam
-lr: 0.0001
+lr: 0.0003
 precision: 32-true
 
 shuffle_trajectories: True # makes sense for linear sampling
 shuffle_batches: False # shuffle batches between epochs
 
-name: logs/overfitting_K=0.1/0
+name: logs/overfitting_K=0.1
 
 gridsearch:
-  batch_size: { lower: 100, upper: 300, type: int }
-  lr: { lower: 0.0001, upper: 0.003, type: float }
-  num_rnn_layers: { lower: 1, upper: 5, type: int }
-  num_lin_layers: { lower: 1, upper: 5, type: int }
-  hidden_size: { lower: 80, upper: 300, type: int }
-  linear_size: { lower: 20, upper: 300, type: int }
+  batch_size: { lower: 150, upper: 230, type: int }
+  lr: { lower: 0.0004, upper: 0.002, type: float }
+  num_rnn_layers: { lower: 2, upper: 5, type: int }
+  num_lin_layers: { lower: 2, upper: 4, type: int }
+  hidden_size: { lower: 120, upper: 210, type: int }
+  linear_size: { lower: 20, upper: 80, type: int }
