--- a/config/template.yaml
+++ b/config/template.yaml
@@ -2,13 +2,12 @@ init_points: 40 # how many points to take from loaded data
 steps: 45 # how many steps to take from loaded data
 K: 0.1 # list of values for StandardMap
 
-hidden_size: 32
-linear_size: 32 # used when num_lin_layers > 1
-num_rnn_layers: 1
-num_lin_layers: 1
+hidden_size: 128
+linear_size: 128 # used when num_lin_layers > 1
+num_rnn_layers: 2
+num_lin_layers: 2
 dropout: 0.0 # doesn't seem necessary
 
-epochs: 20
 batch_size: 256
 loss: mse
 optimizer: adam
@@ -18,7 +17,7 @@ precision: 32-true
 shuffle_trajectories: True # makes sense for linear sampling
 shuffle_batches: False # shuffle batches between epochs
 
-name: logs/overfitting_K=0.1/0
+name: logs/overfitting_K=0.1
 
 gridsearch:
   batch_size: { lower: 150, upper: 230, type: int }
