--- a/config/default.yaml
+++ b/config/default.yaml
@@ -8,20 +8,19 @@ non_linearity: selu
 dropout: 0.0 # doesn't seem necessary
 
 batch_size: 256
-seq_len: 45 # only have one sequence
+seq_len: 20 # only have one sequence
 loss: mse
 optimizer: adam
-lr: 0.0003
+lr: 0.0001
 precision: 32-true
 
 shuffle_trajectories: True # makes sense for linear sampling
 shuffle_batches: False # shuffle batches between epochs
 
 gridsearch:
-  batch_size: { lower: 150, upper: 250, type: int }
-  seq_len: { lower: 20, upper: 80, type: int }
-  lr: { lower: 0.0004, upper: 0.002, type: float }
-  num_rnn_layers: { lower: 2, upper: 5, type: int }
-  num_lin_layers: { lower: 2, upper: 5, type: int }
-  hidden_size: { lower: 70, upper: 250, type: int }
-  linear_size: { lower: 20, upper: 150, type: int }
+  batch_size: { lower: 64, upper: 512, type: int }
+  lr: { lower: -6, upper: -1, type: log }
+  num_rnn_layers: { lower: 1, upper: 6, type: int }
+  num_lin_layers: { lower: 1, upper: 6, type: int }
+  hidden_size: { lower: 32, upper: 256, type: int }
+  linear_size: { lower: 32, upper: 256, type: int }
